--- a/Ch02/ch02.css
+++ b/Ch02/ch02.css
@@ -25,3 +25,16 @@
     background-color: black;
     color:white;
 }
+.divdemo{
+    background-color: black;
+}
+
+#demo{
+    background-color: white;
+    color: black;
+}
+
+.demo2{
+    color: yellow;
+    font-size: 16px;
+}
