--- a/Ch03/Ch03.css
+++ b/Ch03/Ch03.css
@@ -20,3 +20,10 @@ h3{
     margin: 0px;
     padding: 5px;
 }
+.ex2resultdiv{
+    background-color: cyan;
+    width: 180px;
+    margin-top: 20px;    
+    border-style: dashed;
+
+}
