--- a/Ch06/Ch06.css
+++ b/Ch06/Ch06.css
@@ -1,31 +1,49 @@
+/*main 區塊元素*/
 .playercol{
     float: left;    
-    padding:  20px;
-    padding-right: 10px;
-    box-sizing: border-box; 
+    margin-top: 20px;
+    margin-bottom: 10px;    
 }
 .infocol{
     float: left;
-    width: 100%;
-    padding: 20px;
-    padding-top: 10px;
-    background-color:white;
+    width: 100%; 
+    margin-bottom: 10px;
     box-sizing: border-box; 
 }
-
-.authContainer{
+.viewcol{
+    float: left;
+    width: 100%;   
+    box-sizing: border-box; 
     border-bottom: 1px solid rgba(0, 0, 0, 0.2);
-    padding-left: 10px;
-    padding-bottom: 5px;
-    padding-top: 5px;     
+    margin-bottom: 10px;
+}
+.viewcount{
+    float: left;
+    width: 50%;
+}
+.optioncol{
+    float: right;
+    max-width: 100%;
+}
+.options button{
+    padding:5px;
+    border:none;
+    color:rgba(0, 0, 0, 0.5);    
+}
+
+.authContainer{      
+    float: left;
+    max-width: 100%;
+    padding-top: 5px;  
+    padding-bottom: 5px;    
 }
 .authContainer div{
     vertical-align: middle;
     display: inline-block;
 }
 .auth img{
-    width: 100%;
-}
+    max-width: 100%;
+} 
 .authInfo span{
     margin-top: 5px;
     display: inline-block;
@@ -35,15 +53,37 @@
     border-radius: 3px;
     box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
 }
-
-.options button{
-    padding:5px;
-    border:none;
-    color:rgba(0, 0, 0, 0.5);
-}
-.asidecol{
+.infoseccol{
     float: left;
-    box-sizing: border-box; 
+    padding-left: 60px;    
+    width: 100%; 
+    border-bottom: 1px solid rgba(0, 0, 0, 0.2);
+    margin-bottom: 10px
+}
+.Commentcol{        
+    float: left;    
+    width: 100%;
+    margin-bottom: 10px
+}
+.selfComment{
+    font-size: 0;
+}
+.selfComment textarea{
+    font-size: initial;
+    display: inline-block;
+    vertical-align: middle;
+    width: calc(100% - 50px - 10px);
+    margin-left: 10px;
+    resize: none;
+    border-radius: 3px;
+    border: 1px solid rgba(0, 0, 0, 0.2);
+}
+
+/*aside 區塊元素*/
+.asidecol{
+    width: 100%;
+    float: left;
+    box-sizing: border-box;    
 }
 .imagecol{
     float: left;
@@ -52,6 +92,8 @@
     
 }
 .vBox{
+    float: left;
+    width: 100%;
     margin-bottom: 7px;
     padding: 0;
 }
@@ -61,13 +103,14 @@
     border-bottom: solid 1px rgba(0, 0,0 , 0.15);
 }
 .vBox img{
-    max-width: 100%;
-    margin-right: 5px;
+    float: left;
+    max-width: 50%;      
+    height: auto; 
 }
-.infoContainer{
-    float: right; 
-    width: 125 px;
-    box-sizing: border-box; 
+.infoContainer{ 
+    float: left;
+    width: 50%;
+
 }
 .infoContainer h4{
     font-size: 110%;
@@ -75,7 +118,54 @@
 .infoContainer h5{
     color:rgba(0, 0, 0, 0.5);
 }
-.wordcol{    
+
+/*其他*/
+.wordcol{
+    margin: 0;
+    margin-left:5px ;
     word-break: break-all;          
-    margin: 0px;
+}
+@media screen and (max-width: 768px)  {
+    .viewcol{
+        margin-bottom: 0;
+    }
+    .infocol{
+        margin-bottom: 0;
+    }
+    .infocol h2{
+        font-size: 6vw;
+    }
+    .optioncol{        
+        width: 100%;
+        text-align:center;
+    }
+    .options button{        
+        font-size: 2.5vw;
+        margin-left: 3%;
+        margin-right: 3%;
+    }
+
+    .authContainer{
+        width: 100%;
+        border-bottom: 1px solid rgba(0, 0, 0, 0.2);
+    }
+    .authInfo{
+        width: auto;
+    }    
+    .authInfo span{         
+        padding:7px 10px 7px 10px; 
+    }
+    .authInfo h5{       
+        display: inline-block;                
+    }    
+    .vBox img{
+        max-width: 100%;
+        width: 100%;        
+    }
+    .infoContainer{
+        width: 100%;
+    }
+    .infoContainer h5{
+        display: inline-block;
+    }
 }
