--- a/Ch06/Ch06.css
+++ b/Ch06/Ch06.css
@@ -1,9 +1,39 @@
 /*main 區塊元素*/
+/*--------此區塊增加Ch07練習--------*/
 .playercol{
-    float: left;    
+    position: relative;   
     margin-top: 20px;
     margin-bottom: 10px;    
 }
+.playercol img{
+    max-width: 100%;
+}
+.playercol .hoverShow{
+    position: absolute;
+    width: 100%;
+    bottom: 0;
+    background: rgba(0, 0, 0, 0.3);
+    padding: 5px;
+    opacity: 0;
+}
+.playercol:hover .hoverShow{
+    opacity: 1;
+}
+.playercol button{
+    background: transparent;
+    color: white;    
+    margin-right: 5px;
+}
+.playercol .hoverShow div{
+    display: inline-block;
+    vertical-align: middle;
+}
+.playercol .hoverShow .time{
+    color: white;
+    box-sizing: border-box; 
+}
+/*--------此區塊增加Ch07練習--------*/
+
 .infocol{
     float: left;
     width: 100%; 
@@ -30,7 +60,6 @@
     border:none;
     color:rgba(0, 0, 0, 0.5);    
 }
-
 .authContainer{      
     float: left;
     max-width: 100%;
@@ -53,6 +82,19 @@
     border-radius: 3px;
     box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
 }
+
+/*--------此區塊增加Ch07練習--------*/
+.authInfo h5:last-child span:last-child{
+    display: none;
+}
+.authInfo h5:last-child:hover span:first-child{
+    display: none;
+}
+.authInfo h5:last-child:hover span:last-child{
+    display: inline-block;
+}
+/*--------此區塊增加Ch07練習--------*/
+
 .infoseccol{
     float: left;
     padding-left: 60px;    
@@ -113,16 +155,17 @@
 
 }
 .infoContainer h4{
+    margin-left: 5px;
     font-size: 110%;
 }
 .infoContainer h5{
+    margin-left: 5px;
     color:rgba(0, 0, 0, 0.5);
 }
 
 /*其他*/
 .wordcol{
-    margin: 0;
-    margin-left:5px ;
+    margin: 0;    
     word-break: break-all;          
 }
 @media screen and (max-width: 768px)  {
@@ -150,13 +193,14 @@
         border-bottom: 1px solid rgba(0, 0, 0, 0.2);
     }
     .authInfo{
-        width: auto;
+        width: auto;       
+        vertical-align: middle;   
     }    
     .authInfo span{         
-        padding:7px 10px 7px 10px; 
+        padding:7px 10px 7px 10px;         
     }
     .authInfo h5{       
-        display: inline-block;                
+        display: inline-block;
     }    
     .vBox img{
         max-width: 100%;
@@ -167,5 +211,12 @@
     }
     .infoContainer h5{
         display: inline-block;
+    }
+    .hoverShow .vBtn{
+        font-size: 0.5vw;
+        padding: 0.5vw;
+    }    
+    .hoverShow .time{
+        font-size: 0.5vw;
     }
 }
